// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DEPRECATED_BooleanField should render a basic boolean input 1`] = `
<div
  class="form-check"
  color=""
>
  <label
    class="control-label form-check-label"
    for="id-mybooleanfield"
  >
    <input
      class="form-check-input form-control"
      id="id-mybooleanfield"
      placeholder="placeholder"
      type="text"
    />
    <span
      style="vertical-align: middle;"
    >
      label
    </span>
  </label>
</div>
`;

exports[`DEPRECATED_BooleanField should render a help text 1`] = `
<div
  class="form-check"
  color=""
>
  <label
    class="control-label form-check-label"
    for="id-mybooleanfield"
  >
    <input
      class="form-check-input form-control"
      id="id-mybooleanfield"
      placeholder="placeholder"
      type="text"
    />
    <span
      style="vertical-align: middle;"
    >
      label
    </span>
  </label>
  <small
    class="form-text text-muted"
  >
    help text
  </small>
</div>
`;

exports[`DEPRECATED_BooleanField should render a required input 1`] = `
<div
  class="required form-check"
  color=""
>
  <label
    class="control-label form-check-label"
    for="id-mybooleanfield"
  >
    <input
      class="form-check-input form-control"
      id="id-mybooleanfield"
      placeholder="placeholder"
      required=""
      type="text"
    />
    <span
      style="vertical-align: middle;"
    >
      label
    </span>
  </label>
</div>
`;

exports[`DEPRECATED_BooleanField should render inline 1`] = `
<div
  class="d-inline-block form-check"
  color=""
>
  <label
    class="control-label form-check-label"
    for="id-mybooleanfield"
  >
    <input
      class="form-check-input form-control"
      id="id-mybooleanfield"
      placeholder="placeholder"
      type="text"
    />
    <span
      style="vertical-align: middle;"
    >
      label
    </span>
  </label>
</div>
`;

exports[`DEPRECATED_BooleanField should render the input with an error 1`] = `
<div
  class="form-check"
  color="danger"
>
  <label
    class="control-label form-check-label"
    for="id-mybooleanfield"
  >
    <input
      class="form-check-input form-control-danger form-control"
      id="id-mybooleanfield"
      placeholder="placeholder"
      type="text"
    />
    <span
      style="vertical-align: middle;"
    >
      label
    </span>
  </label>
  <div
    class="invalid-feedback"
  >
    the value is wrong
  </div>
</div>
`;

exports[`DEPRECATED_BooleanField should use default props 1`] = `
<div
  class="form-check"
  color=""
>
  <label
    class="control-label form-check-label"
    for="id-mybooleanfield"
  >
    <input
      class="form-check-input form-check-input"
      id="id-mybooleanfield"
      placeholder="placeholder"
      type="checkbox"
    />
    <span
      style="vertical-align: middle;"
    >
      label
    </span>
  </label>
</div>
`;
